# Foraging-Swarm-Robot-ARGoS-1

./: README.md  update_XML_parameters.py
12_15_data/: random_CPFA_r1192_tag16384_80by80_ForageData.txt  random_CPFA_r1192_tag16384_80by80_iAntTagData.txt  random_CPFA_r16_tag256_10by10_ForageData.txt  random_CPFA_r16_tag256_10by10_iAntTagData.txt  random_CPFA_r296_tag4096_40by40_ForageData.txt  random_CPFA_r296_tag4096_40by40_iAntTagData.txt  random_CPFA_r72_tag1024_20by20_ForageData.txt  random_CPFA_r72_tag1024_20by20_iAntTagData.txt  random_static_MPFA_n17_r72_tag1024_20by20_ForageData.txt  random_static_MPFA_n17_r72_tag1024_20by20_iAntTagData.txt  random_static_MPFA_n257_r1192_tag16384_80by80_ForageData.txt  random_static_MPFA_n257_r1192_tag16384_80by80_iAntTagData.txt  random_static_MPFA_n5_r16_tag256_10by10_ForageData.txt  random_static_MPFA_n5_r16_tag256_10by10_iAntTagData.txt  random_static_MPFA_n65_r296_tag4096_40by40_ForageData.txt  random_static_MPFA_n65_r296_tag4096_40by40_iAntTagData.txt  random_static_MPFA_n65_r336_tag4096_40by40_ForageData.txt  random_static_MPFA_n65_r336_tag4096_40by40_iAntTagData.txt
12_17_data/: random_CPFA_r296_tag1024_40by40_ForageData.txt  random_CPFA_r296_tag1024_40by40_iAntTagData.txt  random_CPFA_r296_tag16384_40by40_ForageData.txt  random_CPFA_r296_tag16384_40by40_iAntTagData.txt  random_CPFA_r296_tag256_40by40_ForageData.txt  (+27 more)
CPFA/: .gitignore  CMakeLists.txt  (+9 more)
Ideal_Transportation_MPFA/source/MPFA/: CMakeLists.txt  MPFA_controller.cpp  MPFA_controller.h  MPFA_loop_functions.cpp  MPFA_loop_functions.h  MPFA_qt_user_functions.cpp
(+1261 files in other folders)
